--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,20 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Test addwww
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install reportlab
+
+      - name: Run tests
         run: |
           chmod +x addwww
           chmod +x test.bash
           ./test.bash
+
  
 
